HDX-7041 - [responsive] org detail page          - fix all links not redirecting to light org page          - responsive org logo          - align org logo right for tablet

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/light/organization/org-light.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/light/organization/org-light.css
@@ -3,4 +3,10 @@
 }
 .org-light .org-logo-large {
   margin-top: 20px;
+  width: 100%;
+  padding-right: 15px;
+  text-align: right;
+}
+.org-light .org-logo-large img {
+  max-width: 100%;
 }
